--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -609,32 +609,43 @@ en:
     
     new:
       tagline: Neopets wearables made easy!
-      load_pet_legend: Enter your pet's name
-      load_pet_submit: Plan my outfit!
-      start_from_scratch_legend: Or start from scratch
-      start_from_scratch_submit: Go
-      your_items_tagline: Track and trade!
-      your_items_description:
-        Make lists of the items you own and want,
-        and share them with the world.
-      your_items_user_search_placeholder: find a user…
-      your_items_user_search_submit: search
-      infinite_closet_tagline: Looking for something?
-      infinite_closet_description: Take a look through our wearables database!
-      infinite_closet_item_search_placeholder: find an item…
-      infinite_closet_item_search_submit: search
-      modeling_hub_tagline: Found something?
-      modeling_hub_description:
-        Enter a pet's name here and we'll keep a copy of what it's wearing.
-        Thanks so much!
-      modeling_hub_load_pet_placeholder: model a pet…
-      modeling_hub_load_pet_submit: submit
-      latest_contribution_header: Contributions
-      latest_contribution_description_html:
-        "%{user_link} showed us %{contributed_description}.
-        Thanks, %{user_link}!"
-      blog_linkback: OpenNeo Blog
-      newest_items_header: New Items
+      load_pet:
+        legend: Enter your pet's name
+        submit: Plan my outfit!
+      start_from_scratch:
+        legend: Or start from scratch
+        submit: Go
+      your_items:
+        tagline: Track and trade!
+        description:
+          Make lists of the items you own and want,
+          and share them with the world.
+        user_search:
+          placeholder: find a user…
+          submit: search
+      infinite_closet:
+        tagline: Looking for something?
+        description: Take a look through our wearables database!
+        item_search:
+          placeholder: find an item…
+          submit: search
+      modeling_hub:
+        tagline: Found something?
+        description:
+          Enter a pet's name here and we'll keep a copy of what it's wearing.
+          Thanks so much!
+        load_pet:
+          placeholder: model a pet…
+          submit: submit
+      latest_contribution:
+        header: Contributions
+        description_html:
+          "%{user_link} showed us %{contributed_description}.
+          Thanks, %{user_link}!"
+      blog:
+        link: OpenNeo Blog
+      newest_items:
+        header: New Items
     
     show:
       default_outfit_name: Shared outfit
