i18n for pets#load flashes

--- a/config/locales/en-meep.yml
+++ b/config/locales/en-meep.yml
@@ -657,6 +657,15 @@ en-meep:
         waiting: Weeting…
         loading: Leeding…
         submission_success: "%{points} peeps"
+    
+    load:
+      not_found: We couldn't meep a pet by that name. Is it meeped correctly?
+      asset_download_error:
+        We meeped the pet and what it's wearing, but couldn't meep the
+        associated Flash files. Maybe Neopets is down. Please meep again later!
+      pet_download_error:
+        We couldn't meep to Neopets to meep up the pet. Maybe they're down.
+        Please try meep later!
   
   users:
     index:
