--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -77,7 +77,7 @@ en:
         owned:
           in_list:
             Success! You own %{count} of the %{item_name} in the %{list_name} list.
-          unlisted: Success! You own of the %{count} %{item_name}.
+          unlisted: Success! You own %{count} of the %{item_name}.
         wanted:
           in_list:
             Success! You want %{count} of the %{item_name} in the %{list_name} list.
