i18n for pet_query.js

--- a/config/locales/en-meep.yml
+++ b/config/locales/en-meep.yml
@@ -627,6 +627,10 @@ en-meep:
         link: OpenNeo Meep
       newest_items:
         header: New Meeps
+      pet_query:
+        notice_html:
+          Thanks for meeping us <strong>%{pet_name}</strong>.
+          Meep up the good work!
     
     show:
       default_outfit_name: Meeped outfit
