--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -646,6 +646,10 @@ en:
         link: OpenNeo Blog
       newest_items:
         header: New Items
+      pet_query:
+        notice_html:
+          Thanks for showing us <strong>%{pet_name}</strong>.
+          Keep up the good work!
     
     show:
       default_outfit_name: Shared outfit
