load pet by locale, prepare needed translations

--- a/config/locales/en-MEEP.yml
+++ b/config/locales/en-MEEP.yml
@@ -5,6 +5,7 @@ en-MEEP:
   infinite_closet: Infinite Meepit
   modeling_hub: Meepiting Hub
   locale_name: English (meep!)
+  neopets_language_code: en
   
   activerecord:
     attributes:
