--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -325,6 +325,21 @@ en:
       contributors:
         header: Brought to you by
         footer: Thanks!
+    
+    search:
+      errors:
+        not_found:
+          label: Filter "%{label}" does not exist. Is it spelled correctly?
+          species:
+            Species "%{species_name}" does not exist. Is it spelled correctly?
+          zone: Zone "%{zone_name}" does not exist. Is it spelled correctly?
+      labels:
+        name: name
+        is_nc: nc
+        is_pb: pb
+        species_support_id: species
+        occupied_zone_id: occupies,zone,type
+        restricted_zone_id: restricts
   
   neopets_pages:
     create:
