user:owns, user:wants queries

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -333,6 +333,12 @@ en:
           species:
             Species "%{species_name}" does not exist. Is it spelled correctly?
           zone: Zone "%{zone_name}" does not exist. Is it spelled correctly?
+          ownership:
+            I don't know what user:%{keyword} means. Is it spelled correctly?
+        not_logged_in:
+          The "user" filters are only available if you're logged in.
+      flag_keywords:
+        is: is
       labels:
         name: name
         is_nc: nc
@@ -340,6 +346,9 @@ en:
         species_support_id: species
         occupied_zone_id: occupies,zone,type
         restricted_zone_id: restricts
+        user_closet_hanger_ownership: user
+        user_owns: owns
+        user_wants: wants
   
   neopets_pages:
     create:
