--- a/config/locales/en-MEEP.yml
+++ b/config/locales/en-MEEP.yml
@@ -465,6 +465,14 @@ en-MEEP:
       success: Outfit "%{outfit_name}" succeessfully demeeped.
     
     edit:
+      item:
+        controls:
+          worn_items:
+            add: Weep
+            remove: Unweep
+          closet:
+            add: Closeet
+            remove: Uncloseet
       pet_type:
         not_found:
           We haven't meeped that combination before. Have you?
