--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -216,10 +216,16 @@ en:
   
   contributions:
     contributed_description:
-      item_suffix: for the first time
-      swf_asset_suffix: on a new body type
-      pet_type_suffix: for the first time
-      pet_state_prefix: a new pose for
+      parents:
+        item:
+          present_html: the %{item_link}
+          blank: data for an item that has since been updated
+        pet_type_html: the %{pet_type_name}
+      main:
+        item_html: "%{item_description} for the first time"
+        swf_asset_html: "%{item_description} on a new body type"
+        pet_type_html: "%{pet_type_description} for the first time"
+        pet_state_html: "a new pose for %{pet_type_description}"
     
     contribution:
       description_html: "%{user_link} showed us %{contributed_description}"
